dnl Process this file with autoconf to produce a configure script
AC_INIT(fastereo.c)

dnl Detect the canonical host and target build environment
AC_CANONICAL_HOST
AC_CANONICAL_TARGET

AM_INIT_AUTOMAKE(fastereo, 0.1.0)

dnl Check for tools
AC_PROG_CC

dnl Check for compiler environment
AC_C_CONST

AC_ARG_ENABLE(debug,
[  --enable-debug          turn on debugging [default no]])
if test "$enable_debug" = "yes"; then
  AC_DEFINE(DEBUG)
  dnl CFLAGS="-DDEBUG $CFLAGS"
fi

dnl Figure out which math library to use
case "$target" in
    *-*-mingw32*)
        MATHLIB=""
        SYS_GL_LIBS="-lopengl32 -lglu32"
        ;;
    *-*-beos*)
        MATHLIB=""
        SYS_GL_LIBS="-lGL"
        ;;
    *-*-darwin*)
        MATHLIB=""
        SYS_GL_LIBS=""
        ;;
    *)
        MATHLIB="-lm"
        AC_PATH_X
        AC_PATH_XTRA
        if test x$have_x = xyes; then
            CFLAGS="$CFLAGS $X_CFLAGS"
            SYS_GL_LIBS="$X_LIBS -lGL -lGLU"
        else
            SYS_GL_LIBS="-lGL -lGLU"
        fi
        ;;
esac
AC_SUBST(MATHLIB)

dnl Check for SDL
dnl SDL_VERSION=1.2.0
dnl AM_PATH_SDL($SDL_VERSION,
dnl             :,
dnl 	    AC_MSG_ERROR([*** SDL version $SDL_VERSION not found!])
dnl )
dnl CFLAGS="$CFLAGS $SDL_CFLAGS"
dnl LIBS="$LIBS $SDL_LIBS"

dnl Check for OpenGL
AC_MSG_CHECKING(for OpenGL support)
have_opengl=no
AC_TRY_COMPILE([
 #if defined(__APPLE__) && defined(__MACH__)
 #include <OpenGL/gl.h>
 #include <OpenGL/glu.h>
 #else
 #include <GL/gl.h>
 #include <GL/glu.h>
 #endif
],[
],[
have_opengl=yes
])
AC_MSG_RESULT($have_opengl)
if test x$have_opengl = xyes; then
    CFLAGS="$CFLAGS -DHAVE_OPENGL"
    GL_LIBS="$SYS_GL_LIBS"
else
    AC_MSG_ERROR(Unable to find OpenGL headers and libraries)
fi
AC_SUBST(GL_LIBS)

dnl Check for GLUT
AC_MSG_CHECKING(for GLUT support)
have_glut=no
AC_TRY_COMPILE([
 #if defined(__APPLE__) && defined(__MACH__)
 #include <OpenGL/glut.h>
 #else
 #include <GL/glut.h>
 #endif
],[
],[
have_glut=yes
])
AC_MSG_RESULT($have_glut)
if test x$have_glut = xyes; then
    CFLAGS="$CFLAGS -DHAVE_GLUT"
    GLUT_LIBS="-lglut"
else
    AC_MSG_ERROR(Unable to find GLUT headers and libraries)
fi
AC_SUBST(GLUT_LIBS)

AC_CHECK_PROG(DOXYGEN, doxygen, doxygen, true)

AC_OUTPUT(Makefile)
